Added cropping functionality with options "No", "top", "left". top is defaulted to 8% and left is defaulted to 15%.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,12 @@
           {% endfor %}<br>
       </p>
 	<p>
+	Crop image: 
+	<select name="crop" id="response">
+	  <option value="no" selected="selected">no</option>
+	  <option value="top">top</option>
+	  <option value="left">left</option>
+	</select><br><br>
 	Response type: 
 	<select name="response" id="response">
 	  <option value="html">html</option>
