--- a/app/static/base.css
+++ b/app/static/base.css
@@ -1,3 +1,6 @@
+body{
+	padding-top: 70px;
+}
 #main {
 	margin: 0px auto;
         background-color: #D0D0D0;
@@ -16,4 +19,10 @@
 	padding:15px;
 	border:1px #000;
 	word-wrap: break-word;
+}
+.flash {
+	color: red;
+}
+.brandreflex {
+	height: 150%;
 }
