--- a/app/templates/batch.html
+++ b/app/templates/batch.html
@@ -1,10 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
-  <form action="batchocr" method="post" name="batchocr" enctype=multipart/form-data>
-      <h3>Submit a json file for batch processing OCR</h3>
-      <input type=file name=file required>
-      <p><input type="submit" value=" OCR this!! "></p>
-  </form>
+<div class="row">
+	<div class="col-lg-12">
+		<form action="batchocr" method="post" name="batchocr" enctype=multipart/form-data>
+				<h3>Submit a json file for batch processing OCR</h3>
+				<div class="form-group">
+					<label for="file">Batch input</label>
+					<input type="file" name="file" id="file" required>
+				</div>
+				<div class="form-group">
+					<button type="submit" class="btn btn-success">Submit</button>
+				</div>
+		</form>
+	</div>
+</div>
 {% endblock %}
 {% block scripts %}
 activateMenu("batch")
