--- a/app/templates/status.html
+++ b/app/templates/status.html
@@ -5,7 +5,7 @@
 		<form class="form-horizontal" role="form" action="status" method="post" name="ocr" enctype="multipart/form-data">
 				<div class="form-group">
 					<label for="file name">Please enter file name</label>
-	    			<input type="text" class="form-control" name="file name" id="file name" placeholder="enter file name" required>
+	    			<input type="text" class="form-control" name="file name" id="file name" placeholder="search" required>
 				</div>
 				<div class="form-group">
 					<button type="submit" class="btn btn-success">Submit</button>
