--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,7 +36,7 @@
 			<!--/.nav-collapse -->
 		</div>
 	</nav>
-	<div class="container" role="main">
+	<div class="container containerpad" role="main">
 		{% with messages = get_flashed_messages() %} {% if messages %}
 		<ul class="flash">
 			{% for message in messages %}
@@ -45,9 +45,10 @@
 		{% endif %} {% endwith %} {% block content %}{% endblock %}
 	</div>
 	<div class="clearfix visible-xs-block"></div>
-	<div class="navbar navbar-default navbar-fixed-bottom">
+	<div class="navbar navbar-default navbar-fixed-bottom footerfixed">
+	<!-- <footer class="footer"> -->
 		<div class="container">
-			<p class="navbar-text">
+			<p class="text-muted">
 			<center>
 
 				Developed by <a
@@ -57,6 +58,7 @@
 			</center>
 			</p>
 		</div>
+	<!-- </footer>	-->
 	</div>
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="static/js/bootstrap.min.js"></script>
