--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,8 +5,7 @@
 <title>{{ title }} - iDigInfo</title> {% else %}
 <title>ocr - iDigInfo</title> {% endif %}
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css"
-	href="static/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="static/base.css">
 <script src="static/base.js"></script>
 </head>
@@ -60,8 +59,8 @@
 		</div>
 	<!-- </footer>	-->
 	</div>
-	<script src="http://code.jquery.com/jquery.min.js"></script>
-	<script src="static/js/bootstrap.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script>
 	{% block scripts %}{% endblock %}
 	</script>
