--- a/app/templates/status.html
+++ b/app/templates/status.html
@@ -17,9 +17,8 @@
 	<h3>List of batch files submitted:</h3> 
 	{% endif %}
 		{% for file in displayfiles %}
-		</ul>
-			<li> {{ file }}</li>
-			<li><a href={{ file }}>{{ file.split("/")[-1] }}</a></li>
+		<ul>
+			<li><a href=/status/{{ file }}>{{ file.split("/")[-1] }}</a></li>
 		</ul>
 		 {% endfor %}
 	</div>
